# multicore

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  dbdownloader.sh  gm  updateall.sh
bfa/: CMakeLists.txt  build.sh  builddb.sh
cataclysm/: CMakeLists.txt  build.sh  builddb.sh  doextract.sh  extract.sh
cmake/: EnsureVersion.cmake  FindOpenSSL.cmake
docker/bfa/BfaCore/: Dockerfile
docker/cataclysm/trinitycore-cata/: Dockerfile  build.sh
docker/legion/legioncore/: Dockerfile  build.sh  run.sh
docker/pandaria/SkyFire_548/: Dockerfile  build.sh
docker/pandaria/torghast-project-5.4.8/: Dockerfile  build.sh
docker/rolling/cyphercore/: Dockerfile  build.sh
docker/rolling/trinitycore/: Dockerfile  build.sh
docker/wotlk/trinitycore-wotlk/: Dockerfile
launch/bfa/BfaCore-Reforged/: docker-compose.yml
launch/cataclysm/trinitycore-cata/: docker-compose.yml
launch/legion/legioncore/: docker-compose.yml
launch/rolling/cyphercore/: docker-compose.yml
launch/rolling/trinitycore-rolling/: docker-compose.yml
legion/: build.sh  builddb.sh
pandaria/: CMakeLists.txt  build.sh
rolling/: CMakeLists.txt  build-rolling.sh  build.sh  doextract.sh  extract.sh
wotlk/: CMakeLists.txt  build.sh
